--- a/css/main.css
+++ b/css/main.css
@@ -97,7 +97,39 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
-   /* -------------------- nav -------------------- */
+@font-face {
+    font-family: 'OpenSans';
+    src: url('../fonts/OpenSans-Regular.woff') format('woff'),
+         url('../fonts/OpenSans-Regular.woff2') format('woff2');
+}
+
+body {
+    font-family: 'OpenSans';
+}
+
+
+
+/* -------------------- header -------------------- */
+
+header {
+    background: #1c93a7;
+}
+
+.container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 0 auto;
+    max-width: 90%;
+}
+
+img {
+    max-height: 150px;
+}
+
+
+
+/* -------------------- nav -------------------- */
    nav{
     display: flex;
     justify-content: left;
@@ -207,23 +239,7 @@ nav a:hover{
 }
 
 
-/* -------------------- header -------------------- */
 
-   header {
-    background: #1c93a7;
-}
-
-.container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin: 0 auto;
-    max-width: 90%;
-}
-
-img {
-    max-height: 150px;
-}
 
 
 
