--- a/css/main.css
+++ b/css/main.css
@@ -106,7 +106,10 @@ textarea {
 body {
     font-family: 'OpenSans';
 }
-
+.container {
+    max-width: 960px;
+    margin: 0 auto;
+}
 
 
 /* -------------------- header -------------------- */
@@ -115,7 +118,7 @@ header {
     background: #1c93a7;
 }
 
-.container {
+.header-container {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -130,14 +133,14 @@ img {
 
 
 /* -------------------- nav -------------------- */
-   nav{
+nav{
     display: flex;
     justify-content: left;
     align-items: center;
     background: #2d2d2d;
     overflow:hidden;
     height:63px;
-  }
+}
 .fa-bars {
     display: none;
     padding: 14px 8px 14px 16px;
